--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,15 @@
         android:padding="16dp" />
 
     <Button
+        android:id="@+id/btn_camera"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="相机"
+        android:textSize="18sp"
+        android:layout_marginBottom="16dp"
+        android:padding="16dp" />
+
+    <Button
         android:id="@+id/btn_gallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
