--- a/app/src/main/res/menu/gallery_menu.xml
+++ b/app/src/main/res/menu/gallery_menu.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     
     <item
+        android:id="@+id/action_select_all"
+        android:title="全选"
+        android:icon="@android:drawable/ic_menu_agenda"
+        app:showAsAction="ifRoom"
+        android:visible="false" />
+        
+    <item
         android:id="@+id/action_delete"
         android:title="删除"
         android:icon="@android:drawable/ic_menu_delete"
