--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,7 +4,13 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
+    <!-- 深色底色 -->
     <path
-        android:fillColor="#3DDC84"
+        android:fillColor="#1F2742"
         android:pathData="M0,0h108v108h-108z" />
+    <!-- 斜切装饰提升质感 -->
+    <path
+        android:fillColor="#3F51B5"
+        android:fillAlpha="0.85"
+        android:pathData="M0,108 L108,0 L108,108 Z" />
 </vector>
