--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -2,21 +2,27 @@
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
-    android:viewportHeight="108"
-    android:tint="#FFFFFF">
+    android:viewportHeight="108">
     <group
-        android:scaleX="2.61"
-        android:scaleY="2.61"
-        android:translateX="22.68"
-        android:translateY="22.68">
+        android:scaleX="2.5"
+        android:scaleY="2.5"
+        android:translateX="23"
+        android:translateY="23">
+        <!-- 圆角相机机身 -->
         <path
-            android:fillColor="@android:color/white"
-            android:pathData="M19,5h-2L17,3L7,3v2L5,5v14h2v2h10v-2h2L19,5zM19,19h-2v-2L7,17v2L5,19L5,5h2L7,3h10v2h2v14z"/>
+            android:fillColor="#FFFFFF"
+            android:pathData="M19,6h-3l-1,-2L9,4L8,6L5,6c-1.1,0 -2,0.9 -2,2v9c0,1.1 0.9,2 2,2h14c1.1,0 2,-0.9 2,-2V8c0,-1.1 -0.9,-2 -2,-2z"/>
+        <!-- 镜头外环（品牌色） -->
         <path
-            android:fillColor="@android:color/white"
-            android:pathData="M15.5,10.5m-2.5,0a2.5,2.5 0,1 1,5 0a2.5,2.5 0,1 1,-5 0"/>
+            android:fillColor="#FFD54F"
+            android:pathData="M15.5,10.5a3.5,3.5 0 1 1 -7,0a3.5,3.5 0 1 1 7,0z"/>
+        <!-- 镜头内圈 -->
         <path
-            android:fillColor="@android:color/white"
-            android:pathData="M12,14l-2,3h4l-2,-3z"/>
+            android:fillColor="#1F2742"
+            android:pathData="M15.5,10.5a1.8,1.8 0 1 1 -3.6,0a1.8,1.8 0 1 1 3.6,0z"/>
+        <!-- 闪光灯指示点 -->
+        <path
+            android:fillColor="#FFFFFF"
+            android:pathData="M18.2,8.2a0.8,0.8 0 1 1 -1.6,0a0.8,0.8 0 1 1 1.6,0z"/>
     </group>
 </vector>
