--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,7 +138,7 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <com.camera.app.ProgressButton
+    <com.pipiqiang.qcamera.app.ProgressButton
             android:id="@+id/btn_start_stop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
