feat(云存储): 添加云存储和SMTP邮件发送功能
实现AWS S3、WebDAV等云存储服务支持，包括自动上传和上传后删除功能
新增SMTP邮件发送功能，支持TLS/SSL加密和多种认证方式
添加相关测试用例和依赖库配置
更新设置界面以配置云存储和SMTP参数
在相册和照片查看器中添加上传菜单项

--- a/app/src/main/res/menu/gallery_menu.xml
+++ b/app/src/main/res/menu/gallery_menu.xml
@@ -15,5 +15,12 @@
         android:icon="@android:drawable/ic_menu_delete"
         app:showAsAction="ifRoom"
         android:visible="false" />
+
+    <item
+        android:id="@+id/action_upload"
+        android:title="上传到云端"
+        android:icon="@android:drawable/ic_menu_upload"
+        app:showAsAction="ifRoom"
+        android:visible="false" />
         
 </menu>
